# VRTestApp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  VRTestApp.sln  appveyor.yml  covBuild.cmd  coverity.cmd
VRTestApp/: Actor.h  CMakeLists.txt  CommonRenderer.h  Config.h  D3D.h  D3D11Renderer.h  ERR.cpp  ERR.h  FS.cpp  FS.h  GL.cpp  GL.h  GLRenderer.h  GL_PROCS.h  GX.cpp  GX.h  OpenVR.props  ReadMe.txt  SDL2.props  SDLAppWindow.cpp  SDLAppWindow.h  ScreenShotImage.h  SimplePlane.h  TGAFile.cpp  TGAFile.h  Test.props  TexturedBox.h  VR.cpp  VR.h  VRTestApp.cpp  VRTestApp.vcxproj  VRTestApp.vcxproj.filters  VSConstant.h  renderers.h  stdafx.cpp  stdafx.h
VRTestApp/zls_math/: zls_math.h  zls_math_funcs.h  zls_math_mat.h  zls_math_traits.h  zls_math_vec.h
Working/: use32bit.cmd  use64bit.cmd
Working/Data/Shaders/: plane.fs  plane.fs.hlsl  plane.vs  plane.vs.hlsl  quad.fs  quad.vs  simple.fs  simple.fs.hlsl  simple.vs  simple.vs.hlsl  simple_shaded.fs  simple_shaded.vs
Working/Data/Shaders/quad_shader/: quad.vs  quad_ilc.fs  quad_sbs.fs  quad_tad.fs
Working/Data/Textures/: Circle.tga
cmake/: FindSDL2.cmake
coverity/: d3d.cpp
doxy/: Doxyfile
libs/SDL2-2.0.4/include/: SDL_opengl.h
scripts/: after_build.ps1  build.ps1
