cmake_minimum_required(VERSION 3.1.0)

set( CMAKE_VERBOSE_MAKEFILE ON )

project( VRTestApp )

# Modules
set( CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake )

# SDL2
list(APPEND CMAKE_PREFIX_PATH "${CMAKE_CURRENT_SOURCE_DIR}/libs/SDL2-2.0.4")

# OpenVR
list(APPEND CMAKE_PREFIX_PATH "${CMAKE_CURRENT_SOURCE_DIR}/libs/openvr")

# Dependencies
find_package(OpenVR REQUIRED)
find_package(SDL2 REQUIRED)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Working)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/Working)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/Working)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL ${CMAKE_SOURCE_DIR}/Working)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_SOURCE_DIR}/Working)

add_subdirectory(VRTestApp) #Project dir
